--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "test": "vitest",
+        "test": "vitest run",
         "test:ui": "vitest --ui",
         "coverage": "vitest run --coverage",
         "prepare": "husky"
